[dyad] Endpoint-sammanfattning implementerad och uppdaterad - wrote 11 file(s) + extra files edited outside of Dyad
